Fixed Alignments and Positions.

--- a/src/sections/Section7/Carousel.css
+++ b/src/sections/Section7/Carousel.css
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  overflow: hidden;
+  width: 100%;  
   margin: 0 auto;
   margin-top: 5%;
  
@@ -132,8 +131,6 @@
 .profile-image-wrapper {
   position: relative;
   margin-top: -90px; 
-
-  
 }
 
 .profile-image {
@@ -148,5 +145,4 @@
 .profile-image.active-img {
   width: 180px;
   height: 180px;
-  margin-top: -40px;
 }
